--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teepee Darts Cup - Mökkiturnaus</title>
 
-    <script crossorigin src="https://cdn.jsdelivr.net/npm/react@18/umd/react.development.js"></script>
-    <script crossorigin src="https://cdn.jsdelivr.net/npm/react-dom@18/umd/react-dom.development.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@babel/standalone/babel.min.js"></script>
+    <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -152,6 +152,189 @@
     const STARTING_SCORE = 301;
     const LEGS_TO_WIN = 3;
     const VICTORY_MUSIC_SRC = 'assets/victory-music.mp3';
+    const BOGEY_NUMBERS = new Set([169, 168, 166, 165, 163, 162, 159]);
+    const FAVORITE_DOUBLES = [40, 32, 24, 16, 20, 36, 12, 8, 4, 2];
+
+    const scoreLabel = (value) => {
+        if (value === 50) return 'BULL';
+        if (value === 25) return '25';
+        if (value <= 40 && value % 2 === 0) return `D${value / 2}`;
+        if (value <= 60 && value % 3 === 0) return `T${value / 3}`;
+        if (value <= 20) return `S${value}`;
+        return String(value);
+    };
+
+    const setupThrowLabel = (value) => {
+        if (value >= 1 && value <= 20) return `S${value}`;
+        if (value === 25) return '25';
+        if (value === 50) return 'BULL';
+        if (value <= 60 && value % 3 === 0) return `T${value / 3}`;
+        if (value <= 40 && value % 2 === 0) return `D${value / 2}`;
+        return String(value);
+    };
+
+    const preferredDoubleLabel = (value) => {
+        if (value === 50) return 'BULL';
+        if (value > 1 && value <= 40 && value % 2 === 0) return `D${value / 2}`;
+        return String(value);
+    };
+
+    const DOUBLE_FINISH_PRIORITY = [40, 32, 24, 16, 20, 36, 12, 8, 4, 2, 28, 26, 22, 18, 14, 10, 6, 30, 34, 38, 50];
+    const DOUBLE_PRIORITY_INDEX = new Map(DOUBLE_FINISH_PRIORITY.map((value, index) => [value, index]));
+
+    const TRIPLE_ORDER = [20, 19, 18, 17, 16, 15, 14, 13, 12, 11, 10, 9, 8, 7, 6, 5, 4, 3, 2, 1];
+    const DOUBLE_ORDER = [20, 16, 12, 10, 18, 14, 8, 6, 4, 2, 1, 3, 5, 7, 9, 11, 13, 15, 17, 19];
+    const SINGLE_ORDER = [20, 19, 18, 17, 16, 15, 14, 13, 12, 11, 10, 9, 8, 7, 6, 5, 4, 3, 2, 1];
+
+    const FINISH_SEGMENTS = [
+        ...TRIPLE_ORDER.map((n) => ({ kind: 'T', number: n, score: n * 3, label: `T${n}`, isDouble: false })),
+        ...DOUBLE_ORDER.map((n) => ({ kind: 'D', number: n, score: n * 2, label: `D${n}`, isDouble: true })),
+        ...SINGLE_ORDER.map((n) => ({ kind: 'S', number: n, score: n, label: `S${n}`, isDouble: false })),
+        { kind: 'B', number: 50, score: 50, label: 'BULL', isDouble: true },
+        { kind: 'B', number: 25, score: 25, label: '25', isDouble: false },
+    ];
+
+    const routeRank = (route, startScore) => {
+        const last = route[route.length - 1];
+        const doubleRank = DOUBLE_PRIORITY_INDEX.has(last.score) ? DOUBLE_PRIORITY_INDEX.get(last.score) : 99;
+        const first = route[0];
+        const middleDoubles = route.slice(0, -1).filter((s) => s.kind === 'D').length;
+        const bullsBeforeFinish = route.slice(0, -1).filter((s) => s.kind === 'B').length;
+
+        let rank = route.length * 100 + doubleRank * 3 + middleDoubles * 2 + bullsBeforeFinish * 2;
+
+        if (startScore > 80 && route.length === 3 && first.kind !== 'T') rank += 18;
+        if (startScore > 60 && route.length === 2 && first.kind === 'D') rank += 10;
+        if (startScore <= 60 && route.length >= 2 && first.kind === 'T') rank += 12;
+
+        return rank;
+    };
+
+    const getCheckoutRoutes = (score, dartsLeft, maxRoutes = 4) => {
+        const rawRoutes = [];
+
+        const walk = (remaining, darts, path) => {
+            if (remaining === 0 && path.length > 0) {
+                const last = path[path.length - 1];
+                if (last.isDouble) rawRoutes.push(path);
+                return;
+            }
+            if (remaining <= 1 || darts === 0) return;
+
+            for (const segment of FINISH_SEGMENTS) {
+                if (segment.score > remaining) continue;
+                walk(remaining - segment.score, darts - 1, [...path, segment]);
+            }
+        };
+
+        walk(score, dartsLeft, []);
+
+        const deduped = [];
+        const seen = new Set();
+        rawRoutes
+            .sort((a, b) => routeRank(a, score) - routeRank(b, score))
+            .forEach((route) => {
+                const key = route.map((s) => s.label).join('-');
+                if (!seen.has(key)) {
+                    seen.add(key);
+                    deduped.push(route);
+                }
+            });
+
+        return deduped.slice(0, maxRoutes);
+    };
+
+    const getMissScenarios = (bestRoute, score) => {
+        if (!bestRoute || !bestRoute.length) return [];
+        const first = bestRoute[0];
+        const scenarios = [];
+
+        if (first.kind === 'T') {
+            scenarios.push({ label: `Jos osut ${`S${first.number}`} (tripla jäi sinkuksi)`, hit: first.number });
+        } else if (first.kind === 'D') {
+            scenarios.push({ label: `Jos osut ${`S${first.number}`} (tupla jäi sinkuksi)`, hit: first.number });
+        } else if (first.kind === 'B' && first.number === 50) {
+            scenarios.push({ label: 'Jos osut 25', hit: 25 });
+        }
+
+        scenarios.push({ label: 'Jos osut ohi', hit: 0 });
+
+        return scenarios.map((scenario) => {
+            const afterHit = score - scenario.hit;
+            const next = getCheckoutRoutes(afterHit, 2, 1)[0];
+
+            return {
+                label: scenario.label,
+                route: next ? next.map((s) => s.label).join(' → ') : getSetupSuggestion(afterHit),
+            };
+        });
+    };
+
+    const getSetupSuggestion = (score) => {
+        const options = [];
+
+        for (const target of FAVORITE_DOUBLES) {
+            const setup = score - target;
+            if (setup > 0 && setup <= 60) {
+                options.push({
+                    throwLabel: setupThrowLabel(setup),
+                    leaveLabel: preferredDoubleLabel(target),
+                });
+            }
+        }
+
+        if (options.length > 1) {
+            return `Pelaa setup: ${options[0].throwLabel} jättää ${options[0].leaveLabel} tai ${options[1].throwLabel} jättää ${options[1].leaveLabel}.`;
+        }
+
+        if (options.length === 1) {
+            return `Pelaa setup: ${options[0].throwLabel} jättää ${options[0].leaveLabel}.`;
+        }
+
+        return 'Pelaa korkea setup (T20/T19) ja vältä 1 tai bust.';
+    };
+
+    const getCheckoutAdvice = (score, dartsLeft) => {
+        if (score < 2 || score > 170) {
+            return { message: 'Checkout-suositukset näkyvät pisteille 2–170.', best: null, alternatives: [], missPlan: [], bogey: false };
+        }
+
+        if (BOGEY_NUMBERS.has(score)) {
+            return {
+                message: `Bogey-luku (${score}) – suoraa 3 tikan checkoutia ei ole.`,
+                best: null,
+                alternatives: [],
+                missPlan: [],
+                bogey: true,
+                setup: getSetupSuggestion(score),
+            };
+        }
+
+        const routes = getCheckoutRoutes(score, dartsLeft, 5);
+        if (!routes.length) {
+            return {
+                message: 'Ei suoraa checkoutia tällä tikkojen määrällä. Pelaa setup seuraavalle vuorolle.',
+                best: null,
+                alternatives: [],
+                missPlan: [],
+                bogey: false,
+                setup: getSetupSuggestion(score),
+            };
+        }
+
+        const [best, ...alternatives] = routes;
+        const missPlan = dartsLeft === 3 ? getMissScenarios(best, score) : [];
+
+        return {
+            message: 'Optimaalinen checkout ja vaihtoehdot alla.',
+            best: best.map((s) => s.label).join(' → '),
+            alternatives: alternatives.map((route) => route.map((s) => s.label).join(' → ')),
+            missPlan,
+            bogey: false,
+        };
+    };
+
+    const canCheckoutInOneDart = (score) => score === 50 || (score > 1 && score <= 40 && score % 2 === 0);
 
     const getStandings = (players, matches, groupPlayersIndices, groupLabel) => {
         const groupMatches = matches.filter((m) => m.group === groupLabel);
@@ -230,7 +413,6 @@
         const [groupMatches, setGroupMatches] = useState([]);
         const [bracketMatches, setBracketMatches] = useState([]);
         const [activeMatch, setActiveMatch] = useState(null);
-        const [matchCelebration, setMatchCelebration] = useState(null);
 
         const shuffleGroups = () => {
             const shuffledIndices = [...Array(players.length).keys()].sort(() => Math.random() - 0.5);
@@ -290,27 +472,7 @@
             });
         }, [groupMatches, view, players, groupA, groupB]);
 
-
-        const triggerWinnerCelebration = (winnerName, isFinal = false) => {
-            if (!winnerName) return;
-
-            setMatchCelebration({ winnerName, isFinal });
-
-            const end = Date.now() + 1800;
-            const rain = () => {
-                confetti({ particleCount: 5, spread: 55, startVelocity: 35, origin: { x: 0.1 + Math.random() * 0.2, y: 0 } });
-                confetti({ particleCount: 5, spread: 55, startVelocity: 35, origin: { x: 0.7 + Math.random() * 0.2, y: 0 } });
-                if (Date.now() < end) requestAnimationFrame(rain);
-            };
-            rain();
-
-            setTimeout(() => setMatchCelebration(null), 2600);
-        };
-
         const handleMatchEnd = (id, s1, s2, history) => {
-            const winnerIdx = activeMatch ? (s1 > s2 ? activeMatch.p1 : activeMatch.p2) : null;
-            const winnerName = winnerIdx !== null ? players[winnerIdx] : null;
-
             if (id.startsWith('m-')) {
                 setGroupMatches((prev) => prev.map((m) => (m.id === id ? { ...m, s1, s2, played: true, history } : m)));
             } else {
@@ -323,11 +485,10 @@
                     if (id === 'wc2') next[2].p2 = winner;
                     if (id === 'sf1') next[4].p1 = winner;
                     if (id === 'sf2') next[4].p2 = winner;
+                    if (id === 'f' && winner !== null) confetti({ particleCount: 200, spread: 70, origin: { y: 0.6 } });
                     return next;
                 });
             }
-
-            triggerWinnerCelebration(winnerName, id === 'f');
             setActiveMatch(null);
         };
 
@@ -587,18 +748,6 @@
                 </main>
 
                 {activeMatch && <DartsCalculator match={activeMatch} players={players} onClose={() => setActiveMatch(null)} onSave={handleMatchEnd} />}
-                {matchCelebration && (
-                    <div className="fixed inset-0 z-[70] flex items-center justify-center bg-black/60 pointer-events-none">
-                        <div className="text-center px-6">
-                            <div className="text-yellow-400 text-xl md:text-3xl font-black uppercase tracking-widest mb-4">
-                                {matchCelebration.isFinal ? 'Turnausvoittaja' : 'Ottelun voittaja'}
-                            </div>
-                            <div className="text-5xl md:text-8xl font-black uppercase text-white drop-shadow-[0_0_30px_rgba(231,227,89,0.7)] animate-bounce">
-                                {matchCelebration.winnerName}
-                            </div>
-                        </div>
-                    </div>
-                )}
             </div>
         );
     }
@@ -629,7 +778,6 @@
         const [bust, setBust] = useState(false);
         const [winnerOfLeg, setWinnerOfLeg] = useState(null);
         const [isFinishingMatch, setIsFinishingMatch] = useState(false);
-        const [audioError, setAudioError] = useState('');
 
         const [initialStarter] = useState(() => (Math.random() < 0.5 ? 0 : 1));
         const [coinFlipLabel] = useState(() => (initialStarter === 0 ? players[match.p1] : players[match.p2]));
@@ -660,23 +808,25 @@
         const currentPlayerIdx = turn === 0 ? match.p1 : match.p2;
         const currentScore = turn === 0 ? p1Score : p2Score;
 
-        const playVictoryMusic = () => {
-            setAudioError('');
+        useEffect(() => {
             const audio = new Audio(VICTORY_MUSIC_SRC);
             audio.preload = 'auto';
+            victoryAudioRef.current = audio;
+
+            return () => {
+                if (!victoryAudioRef.current) return;
+                victoryAudioRef.current.pause();
+                victoryAudioRef.current = null;
+            };
+        }, []);
+
+        const playVictoryMusic = () => {
+            const audio = victoryAudioRef.current;
+            if (!audio) return;
+
             audio.currentTime = 0;
-
-            // Pidetään vahva viite toiston ajan, jotta ääni ei katkea heti näkymän vaihtuessa.
-            window.__teepeeVictoryAudio = audio;
-
-            audio.addEventListener('ended', () => {
-                if (window.__teepeeVictoryAudio === audio) {
-                    window.__teepeeVictoryAudio = null;
-                }
-            }, { once: true });
-
             audio.play().catch(() => {
-                setAudioError('Voittomusiikin toisto epäonnistui. Tarkista tiedosto assets/victory-music.mp3 ja selaimen äänioikeudet.');
+                // Musiikkitiedosto saattaa puuttua tai selaimen autoplay-rajoitukset estävät toiston.
             });
         };
 
@@ -807,10 +957,7 @@
 
             if (newLegs[winnerOfLeg] >= LEGS_TO_WIN) {
                 playVictoryMusic();
-                setIsFinishingMatch(true);
-                setTimeout(() => {
-                    onSave(match.id, newLegs[0], newLegs[1], updatedHistory);
-                }, 1400);
+                onSave(match.id, newLegs[0], newLegs[1], updatedHistory);
             } else {
                 setLegs(newLegs);
                 setHistory(updatedHistory);
@@ -929,7 +1076,6 @@
                         {winnerOfLeg !== null ? (
                             <div className="text-center animate-bounce">
                                 <div className="text-yellow-500 text-4xl font-black mb-4 uppercase">LEG VOITETTU!</div>
-                                {audioError && <div className="text-[11px] text-red-300 mb-3 max-w-xl">{audioError}</div>}
                                 <button onClick={confirmLeg} disabled={isFinishingMatch} className={`bg-green-600 px-8 py-4 rounded-2xl font-black uppercase text-xl ${isFinishingMatch ? 'opacity-50 cursor-not-allowed' : ''}`}>
                                     {isFinishingMatch ? 'Päätetään ottelua...' : 'Jatka peliä'}
                                 </button>
